# map2color

./: .gitignore  README.md  mkdocs.yml  notebook.py  pyproject.toml
docs/: colorspaces.md  index.md  styles.css
docs/.jupyter_cache/: global.db
docs/.jupyter_cache/executed/6591b4a6925288473fb3fac10e15140a/: base.ipynb
notebooks/: cie_xy.py  examples.py
src/map2color/: __init__.py  all_palettes_dict.npz  color.py  color_constants.py  colorbar.html  colorspaces.py  distance.py  plotting.py  transform.py
tests/: test_color.py  test_colorspaces.py  test_distance.py  test_package.py
todo/: ArraySet.py  NOTES  all_palettes_dict.npz  bokeh_anim.py  color_constants.py  consubg.py  jupytext.py  notebook.ipynb  quarto.qmd  subgraph_enum.py  v2_anim.py  vf2.py
