[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "map2color"
version = '0.0.2'
readme = "README.md"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3"
]
authors = [
	{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy", 
	"bokeh", 
	"coloraide"
]
license = {file = "LICENSE"}