[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "map2color"
version = '0.0.2'
readme = "README.md"
classifiers = [
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3"
]
authors = [
	{ name = "Matt Piekenbrock", email = "matt.piekenbrock@gmail.com" }
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "coloraide>=6.2.1",
    "gloe>=0.7.0",
    "numpy>=2.0.2",
]

[dependency-groups]
dev = ["jupyter"]
docs = [
    "mkapi>=1.0.14",
    "mkdocs-material>=9.7.1",
]
plot = [
    "bokeh>=3.4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/map2color"]
